--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
+        "@typescript-eslint/no-explicit-any": "error",
         "import/prefer-default-export": "off",
         "eslint/no-console": "off",
         "@angular-eslint/component-class-suffix": [
