--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,9 @@
       ],
       "rules": {
         "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/lines-between-class-members": "off",
         "import/prefer-default-export": "off",
+        "class-methods-use-this": "off",
         "eslint/no-console": "off",
         "@angular-eslint/component-class-suffix": [
           "error",
